--- a/styles/style.css
+++ b/styles/style.css
@@ -29,13 +29,19 @@
   margin-right: 0;
   margin-top: 80px;
 }
+.logo{
+  width: 228;
+  height: 32;
+}
 .logo_place_header{
   position: absolute;
   left: 64px;
   top: 30px;
   background-image: url(https://github.com/Bababum95/how-to-learn/blob/main/images/logo_place_header.svg); 
 }
-.logo{
-  width: 228;
-  height: 32;
+.header_title{
+  width: 730px;
+  margin-left: 64px;
+  display: flex;
+  align-items:center;
 }
