--- a/styles/style.css
+++ b/styles/style.css
@@ -13,13 +13,59 @@
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
-  /* выше установили ограничения для секции */
+  position: relative;
+  display: flex;
+  background-color: #f2f2f2;
+  z-index: -2;
 }
-
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
+.logo_place_header{
+  width: 228px;
+  height: 32px;
+  position: absolute;
+  left: 64px;
+  top: 30px;
+  z-index: 1;
+}
+.header_title{
+  width: 730px;
+  line-height: 96px;
+  font-size: 102px;
+  font-weight: 600;
+  text-decoration-color: #000000;
+  margin-left: 64px;
+  display: flex;
+  align-items:center;
+  z-index: 1;
+}
+.header_subtitle{
+  width: 388px;
+  position: absolute;
+  left: 64px;
+  bottom: 30px;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  text-decoration-color: #000000;
+  z-index: 1;
+}
+.header_link{
+  text-decoration: none;
+}
+.header__main-illustration{
+  position: absolute;
+  height: 608px;
+  width: 765px;
+  right: 0;
+  bottom: 0;
+}
 .header__square-pic {
   height: 568px;
   width: 568px;
+  position: absolute;
+  top: 64px;
+  right: 0;
+  background-color: #2f80ed;
+  z-index: -1;
 }
 
 /* и элемента с модификатором вида ключ-значение */
@@ -28,20 +74,4 @@
   color: white;
   margin-right: 0;
   margin-top: 80px;
-}
-.logo{
-  width: 228;
-  height: 32;
-}
-.logo_place_header{
-  position: absolute;
-  left: 64px;
-  top: 30px;
-  background-image: url(https://github.com/Bababum95/how-to-learn/blob/main/images/logo_place_header.svg); 
-}
-.header_title{
-  width: 730px;
-  margin-left: 64px;
-  display: flex;
-  align-items:center;
 }
