--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,6 @@
   position: relative;
   display: flex;
   background-color: #f2f2f2;
-  z-index: -2;
 }
 .logo_place_header{
   width: 228px;
@@ -35,7 +34,7 @@
   margin-left: 64px;
   display: flex;
   align-items:center;
-  z-index: 1;
+  z-index: 2;
 }
 .header_subtitle{
   width: 388px;
@@ -46,10 +45,11 @@
   font-size: 18px;
   font-weight: normal;
   text-decoration-color: #000000;
-  z-index: 1;
+  z-index: 2;
 }
 .header_link{
   text-decoration: none;
+  color:#2f80ed;
 }
 .header__main-illustration{
   position: absolute;
@@ -57,6 +57,7 @@
   width: 765px;
   right: 0;
   bottom: 0;
+  z-index: 1;
 }
 .header__square-pic {
   height: 568px;
@@ -65,13 +66,219 @@
   top: 64px;
   right: 0;
   background-color: #2f80ed;
-  z-index: -1;
 }
+.description{
+  display: flex;
+  justify-content: center;
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+.two-columns{
+  width: 80%;
+  display: flex;
+  align-items:baseline;
+  justify-content: space-between;
+}
+.two-columns__bref{
+  width: 175px;
+  color:#2f80ed;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+}
+.two-columns__main-text{
+  width: 80%; 
+  min-width: 784px;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+.two-columns__span-accent{
+  font-weight: 600;
+}
+.digits{
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+.section-title{
+  width: 60%;
+  margin: 0 auto 20px auto;
+  text-align: center;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 600;
+}
+.section-subtitle{
+  width: 60%;
+  margin: 0 auto;
+  text-align: center;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+.table{
+width: 1100px;
+display: flex;
+flex-wrap:wrap;
+margin: 0 auto;
+justify-content:space-around;
+}
+.table__cell{
+  margin-top: 60px;
+  width: 250px;
+}
+.table__heading{
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+.table__text{
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  margin-bottom: 20px;
+}
+.feynman{
+  height: 890px;
+  background-color: #f2f2f2;
+  margin-top: 100px;
+  margin-bottom: 0;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+.feynman__title{
+  width: 648px;
+  padding-top: 100px;
+  margin: 0 auto;
+  text-align: center;
+  z-index: 1;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: 600;
+}
+.feynman__subtitle{
+  margin-top: 70px;
+  text-align: center;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  z-index: 1;
+}
+.feynman_link{
+  position: absolute;
+  top: 50%;
+  right: 48px;
+  text-decoration: none;
+  color:#2f80ed;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  z-index: 1;
+}
+.feynman__illustration{
+  width: 867px;
+  height: 637px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+.kaufman{
+  background-color: #1f1f1f;
+  margin: 0;
+  overflow: hidden;
+  position: relative;
+}
+.section-title_theme_dark{
+  padding-top: 90px;
+  color: white;
+  width: 60%;
+}
+.section-subtitle_theme_dark{
+  color: white;
+  width: 60%;
+}
+.table_theme_dark{
+  padding-bottom: 90px;
 
-/* и элемента с модификатором вида ключ-значение */
+}
 .table__cell_theme_dark {
   width: 200px;
   color: white;
   margin-right: 0;
   margin-top: 80px;
+  z-index: 1;
+}
+.kaufman__triangle{
+  position: absolute;
+  right: -210px;
+  top: 0;
+  width: 877px;
+  height: 877px;
+}
+.table__text_theme_dark{
+
+}
+.footer{
+  background-color: #1f1f1f;
+  margin: 0;
+  min-height: 350px;
+  padding: 60px 0 40px;
+  display: flex;
+}
+.footer__columns{
+  display: flex;
+  justify-content: space-between;
+  width: 90%;
+  
+  margin: 0 auto;
+}
+.footer__column_content_copyright{
+  flex-basis: 711px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+.logo_place_footer{
+margin: 0;
+}
+.footer__author{
+  color: white;
+  margin: 18px 0;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+}
+.footer__column_content_info{
+  display: flex;
+  flex-direction: column;
+}
+.footer__column-heading{
+  color: white;
+  margin: 0 0 20px 0;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: 600;
+}
+.footer__column-links{
+  display: flex;
+  flex-direction: column;
+}
+.footer__column-link{
+  color: white;
+  text-decoration: none;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+}
+.footer__column_content_social{
+  display: flex;
+  flex-direction: column;
+}
+.footer__social-icon{
+width: 16px;
+height: 16px;
+margin-right: 10px;
 }
