--- a/styles/style.css
+++ b/styles/style.css
@@ -87,7 +87,7 @@
   font-weight: normal;
 }
 .two-columns__main-text{
-  width: 80%; 
+  width: 80%;
   min-width: 784px;
   line-height: 34px;
   font-size: 24px;
@@ -211,11 +211,12 @@ justify-content:space-around;
   z-index: 1;
 }
 .kaufman__triangle{
-  position: absolute;
-  right: -210px;
-  top: 0;
-  width: 877px;
-  height: 877px;
+ background-image: url("../images/kaufman-triangle.svg");
+ height: 877px;
+ width: 877px;
+ position: absolute;
+ top:0;
+ right: -210px;
 }
 .table__text_theme_dark{
 
