--- a/styles/style.css
+++ b/styles/style.css
@@ -25,18 +25,18 @@
   top: 30px;
   z-index: 1;
 }
-.header_title{
+.header__title{
   width: 730px;
   line-height: 96px;
   font-size: 102px;
   font-weight: 600;
   text-decoration-color: #000000;
-  margin-left: 64px;
+  margin: 64px 0 0;
   display: flex;
   align-items:center;
   z-index: 2;
 }
-.header_subtitle{
+.header__subtitle{
   width: 388px;
   position: absolute;
   left: 64px;
@@ -46,8 +46,9 @@
   font-weight: normal;
   text-decoration-color: #000000;
   z-index: 2;
+  margin: 0;
 }
-.header_link{
+.header__link{
   text-decoration: none;
   color:#2f80ed;
 }
@@ -78,6 +79,7 @@
   display: flex;
   align-items:baseline;
   justify-content: space-between;
+  margin: 0;
 }
 .two-columns__bref{
   width: 175px;
@@ -85,6 +87,7 @@
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
+  margin: 0;
 }
 .two-columns__main-text{
   width: 80%;
@@ -92,6 +95,9 @@
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
+}
+.two-columns__paragraph{
+  margin: 0 0 30px;
 }
 .two-columns__span-accent{
   font-weight: 600;
@@ -121,7 +127,9 @@ width: 1100px;
 display: flex;
 flex-wrap:wrap;
 margin: 0 auto;
-justify-content:space-around;
+padding: 0;
+justify-content:space-between;
+list-style: none;
 }
 .table__cell{
   margin-top: 60px;
@@ -131,13 +139,13 @@ justify-content:space-around;
   line-height: 1.15;
   font-size: 24px;
   font-weight: 600;
-  margin-bottom: 20px;
+  margin: 0 0 20px;
 }
 .table__text{
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
-  margin-bottom: 20px;
+  margin: 0 0 20px;
 }
 .feynman{
   height: 890px;
@@ -159,14 +167,14 @@ justify-content:space-around;
   font-weight: 600;
 }
 .feynman__subtitle{
-  margin-top: 70px;
+  margin: 70px 0 0;
   text-align: center;
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
   z-index: 1;
 }
-.feynman_link{
+.feynman__link{
   position: absolute;
   top: 50%;
   right: 48px;
@@ -177,7 +185,7 @@ justify-content:space-around;
   font-weight: normal;
   z-index: 1;
 }
-.feynman__illustration{
+.feynman__img{
   width: 867px;
   height: 637px;
   position: absolute;
@@ -218,6 +226,9 @@ justify-content:space-around;
  top:0;
  right: -210px;
 }
+.table__heading_theme_dark{
+
+}
 .table__text_theme_dark{
 
 }
@@ -227,6 +238,7 @@ justify-content:space-around;
   min-height: 350px;
   padding: 60px 0 40px;
   display: flex;
+  box-sizing: border-box;
 }
 .footer__columns{
   display: flex;
