--- a/page/index.css
+++ b/page/index.css
@@ -1,5 +1,7 @@
 @import url(../vendor/normalize.css);
 
+@import url(../Blocks/page/page.css);
+
 @import url(../Blocks/header/header.css);
 @import url(../Blocks/header/__subtitle/header__subtitle.css);
 @import url(../Blocks/header/__square-pic/header__square-pic.css);
@@ -80,15 +82,3 @@
 @import url(../Blocks/resources/resources.css);
 @import url(../Blocks/resources/__link/resources__link.css);
 @import url(../Blocks/resources/__logo-zone/resources__logo-zone.css);
-
-.page {
-    min-width: 1100px;
-    /* мы ещё не умеем делать мобильную версию сайта, */
-    /* поэтому выше установлена минимальная ширина страницы */
-    max-width: 1600px;
-    /* выше установили ограничение по максимальной ширине */
-    margin: 0 auto;
-    /* выше для экранов больше 1600px отцентрировали весь контент */
-    font-family: 'Helvetica Neue', Arial, sans-serif;
-  }
-  
