--- a/Blocks/cards/cards.css
+++ b/Blocks/cards/cards.css
@@ -1,7 +1,10 @@
 .cards{
     width: 920px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     list-style: none;
     margin: 0 auto 100px;
 }
