--- a/Blocks/description/description.css
+++ b/Blocks/description/description.css
@@ -1,6 +1,10 @@
 .description{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     margin-top: 100px;
     margin-bottom: 100px;
   }
