--- a/Blocks/feynman/__link/feynman__link.css
+++ b/Blocks/feynman/__link/feynman__link.css
@@ -8,6 +8,8 @@
     font-size: 36px;
     font-weight: normal;
     z-index: 1;
+    -webkit-transition: opacity 0.5s ease-in;
+    -o-transition: opacity 0.5s ease-in;
     transition: opacity 0.5s ease-in;
   }
   .feynman__link:hover{
