--- a/Blocks/feynman/feynman.css
+++ b/Blocks/feynman/feynman.css
@@ -3,6 +3,8 @@
     background-color: #f2f2f2;
     margin-bottom: 0;
     position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     flex-direction: column;
   }
