--- a/Blocks/footer/__column-link/footer__column-link.css
+++ b/Blocks/footer/__column-link/footer__column-link.css
@@ -4,6 +4,8 @@
     line-height: 30px;
     font-size: 18px;
     font-weight: normal;
+    -webkit-transition: opacity 0.5s ease-in;
+    -o-transition: opacity 0.5s ease-in;
     transition: opacity 0.5s ease-in;
   }
   .footer__column-link:hover{
