--- a/Blocks/footer/__columns/_content/footer__column_content_copyright.css
+++ b/Blocks/footer/__columns/_content/footer__column_content_copyright.css
@@ -1,8 +1,18 @@
 .footer__column_content_copyright{
-    flex-basis: 711px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: space-between;
-  }
+  -ms-flex-preferred-size: 711px;
+      flex-basis: 711px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
   
