--- a/Blocks/footer/__columns/footer__columns.css
+++ b/Blocks/footer/__columns/footer__columns.css
@@ -1,6 +1,10 @@
 .footer__columns{
-    display: flex;
-    justify-content: space-between;
-    width: 90%;
-    margin: 0 auto;
-  }
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 90%;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
