--- a/Blocks/footer/footer.css
+++ b/Blocks/footer/footer.css
@@ -3,6 +3,8 @@
     margin: 0;
     min-height: 350px;
     padding: 60px 0 40px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     box-sizing: border-box;
   }
