--- a/Blocks/header/__link/header__link.css
+++ b/Blocks/header/__link/header__link.css
@@ -1,6 +1,8 @@
 .header__link{
     text-decoration: none;
     color:#2f80ed;
+    -webkit-transition: opacity 0.5s ease-in;
+    -o-transition: opacity 0.5s ease-in;
     transition: opacity 0.5s ease-in;
   }
   .header__link:hover{
