--- a/Blocks/header/__title/header__title.css
+++ b/Blocks/header/__title/header__title.css
@@ -4,9 +4,14 @@
     line-height: 96px;
     font-size: 102px;
     font-weight: 600;
+    -webkit-text-decoration-color: #000000;
     text-decoration-color: #000000;
     margin: 0 0 0 64px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items:center;
+    -webkit-box-align:center;
+        -ms-flex-align:center;
+            align-items:center;
     z-index: 2;
   }
