--- a/Blocks/header/header.css
+++ b/Blocks/header/header.css
@@ -3,6 +3,8 @@
     min-height: 600px;
     max-height: 756px;
     position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     background-color: #f2f2f2;
     overflow: hidden;
