--- a/Blocks/khan/__buy-link/khan__buy-link.css
+++ b/Blocks/khan/__buy-link/khan__buy-link.css
@@ -2,6 +2,8 @@
     line-height: 42px;
     font-size: 30px;
     font-weight: normal;
+    -webkit-transition: opacity 0.5s ease-in;
+    -o-transition: opacity 0.5s ease-in;
     transition: opacity 0.5s ease-in;
     text-decoration: none;
 }
