--- a/Blocks/table/table.css
+++ b/Blocks/table/table.css
@@ -1,9 +1,14 @@
 .table{
     width: 1100px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap:wrap;
+    -ms-flex-wrap:wrap;
+        flex-wrap:wrap;
     margin: 0 auto;
     padding: 0;
-    justify-content:space-between;
+    -webkit-box-pack:justify;
+        -ms-flex-pack:justify;
+            justify-content:space-between;
     list-style: none;
     }
