--- a/Blocks/two-columns/two-columns.css
+++ b/Blocks/two-columns/two-columns.css
@@ -1,7 +1,13 @@
 .two-columns{
-    width: 80%;
-    display: flex;
-    align-items:baseline;
-    justify-content: space-between;
-    margin: 0;
-  }
+  width: 80%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align:baseline;
+      -ms-flex-align:baseline;
+          align-items:baseline;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 0;
+}
