--- a/Blocks/resources/__link/resources__link.css
+++ b/Blocks/resources/__link/resources__link.css
@@ -1,10 +1,8 @@
 .resources__link{
-    width: 270px;
-    height: 38px;
     -webkit-transition: opacity 0.5s ease-in;
     -o-transition: opacity 0.5s ease-in;
     transition: opacity 0.5s ease-in;
-    text-align: center;
+    display: block;
 }
 .resources__link:hover{
     opacity: 0.7;
